--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav div a:hover{
   
   
   .banner {
-    background: url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f') center/cover no-repeat;
+    background: url('img/banner.png') no-repeat center/cover;
     height: 300px;
     display: flex;
     align-items: flex-end;
@@ -98,7 +98,7 @@ nav div a:hover{
   }
   
   .banner-content {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.271);
     padding: 20px;
     border-radius: 10px;
     color: aliceblue;
@@ -106,14 +106,15 @@ nav div a:hover{
   
   .banner-content h2 {
     font-size: 28px;
+    color: rgb(255, 208, 0);
   }
   
   .banner-content button {
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #00f1a5;
+    background-color: #020736;
     border: none;
-    color: rgb(0, 0, 0);
+    color: rgb(164, 187, 255);
     cursor: pointer;
     border-radius: 5px;
   }
